// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentSearches renders empty state 1`] = `
<div
  className="m-recent-searches"
>
  <div
    className="m-recent-searches__heading"
  >
    Recent Searches
  </div>
</div>
`;

exports[`RecentSearches renders with data 1`] = `
<div
  className="m-recent-searches"
>
  <div
    className="m-recent-searches__heading"
  >
    Recent Searches
  </div>
  <button
    className="m-recent-searches__button"
    onClick={[Function]}
  >
    poodle
  </button>
  <button
    className="m-recent-searches__button"
    onClick={[Function]}
  >
    999-502
  </button>
  <button
    className="m-recent-searches__button"
    onClick={[Function]}
  >
    999-501
  </button>
</div>
`;
